# server/openapi.json
@@ -526,6 +526,10 @@
               "stellarPublicKey": {
                 "type": "string",
                 "example": "GABC1234..."
+              },
+              "referralCode": {
+                "type": "string",
+                "example": "ABC12345"
               }
             }
           }
